Added support for Invitations to enable dual domains. This includes acknowledgement of successful submission.

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -7,7 +7,7 @@
       | to experience the science behind the beautiful you. 
     
     / .title-row
-    = link_to("REGISTER FOR AN INVITATION ", new_user_registration_path, class: "lbutton", method: :get)
+    = link_to("REGISTER FOR AN INVITATION ", new_invitation_path, class: "lbutton", method: :get)
       / p.title
       /   | REGISTER FOR AN INVITATION
       /
@@ -54,7 +54,7 @@ ul.imagelist.small-block-grid-3
       | Come back often as we are just beginning and launching exciting new features often! We are happy that you are here and can not wait to inspire the beautiful you.
     p
       | For more information and to request an invitation to our exclusive Beta program, simply 
-      = link_to "REGISTER FOR AN INVITATION ", new_user_registration_path 
+      = link_to "REGISTER FOR AN INVITATION ", new_invitation_path 
       | and be one of the first to experience the science behind the beautiful you.
     
     
