--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -7,8 +7,8 @@
 - else
   / li
   /   = link_to 'Sign up', new_user_registration_path
-  li
-    = link_to 'Sign in', new_user_session_path
+  / li
+  /   = link_to 'Sign in', new_user_session_path
 - if user_signed_in?
   - if current_user.admin?
     li
