--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require_self
+ //= require foundation_and_overrides
+
  *= require foundation_and_overrides
  *= require video-js
  *= require_tree .
