Added new data tables and classes to support saving custom looks. Added an img_filename col to profiles to store the profile image file location. Added the new colorsisters logo to the nav bar. Added a title to the looks page. Added See How text to each product role for the preferred default product.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,14 @@
  *= require_tree .
  */
 
+li.name {
+  padding-left: 10%;
+}
+.navbar_logo {
+  height: 80%;
+  padding-top: 2%;
+//  padding-bottom: 2%;
+}
 html { 
   font-size: 62.5%;
 }
