--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -2,8 +2,9 @@
 nav.top-bar[data-topbar]
   ul.title-area
     li.name
-      h1
-        = link_to 'ColorSisters', root_path
+      / h1
+      = link_to(image_tag("home_page/long-cs-logo2.png", class: :navbar_logo), root_path)
+
     li.toggle-topbar.menu-icon
       a[href="#"]
         Menu
