--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,8 +15,9 @@ html
       == render 'layouts/navigation'
       / = "Logged in as #{current_user.name}"  unless current_user.blank?
 
-    main[role="main"]           
+    main[role="main"]
       == render 'layouts/messages'
+      / .row
       == yield
       
       
