--- a/app/views/looks/_product_review.html.slim
+++ b/app/views/looks/_product_review.html.slim
@@ -4,20 +4,18 @@
       - user = User.last
       - profile = user.profile
       .row.profile1
-        ul class="small-block-grid-#{non_skin_physical_attribute_count(user)}"
-          - physical_attributes(user).each do |label, value|
-            li
-              = "#{label.to_s.humanize.titleize}: " + value
-      .row.profile2
-        = "Skin type: #{profile.skin_type}" unless profile.skin_type.blank?
+        - physical_attributes(user).each do |label, value|
+              p.attrib = "#{label.to_s.humanize.titleize}: " + value
+      .row.profile1
+        p.attrib = "Skin type: #{profile.skin_type}" unless profile.skin_type.blank?
   .row.review_right
-    .columns.large-3
-      = image_tag("profile/head_shot.jpg", class: "review_headshot")
-    .columns.large-9
+    .columns.medium-3.small-3
+      = image_tag("profile/head_shot.jpg", class: "review-headshot")
+    .columns.medium-9.small-9
       .row
         - ([1,2,3,4,5][Random.rand(4)]).times do
           = image_tag("product/review_star.png")
-      .row
+      .row.use
         p.use_again
           = "Use again: #{review.use_again ? 'Yes':'No'}"
         p.recommend
