--- a/app/views/looks/_role_product.html.slim
+++ b/app/views/looks/_role_product.html.slim
@@ -1,7 +1,7 @@
 dd.accordion-navigation
-  a href="#panel_#{product_app.product.id}"
+  a.summary href="#panel_#{product_app.product.id}"
     = render("looks/product_summary", product_app: product_app)
-  div.content id="panel_#{product_app.product.id}"
+  .content id="panel_#{product_app.product.id}"
     = render("looks/product_detail", product: product_app.product)
     = render("looks/product_review", review: product_app.product.product_reviews[0])
       
