--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,9 @@ html
     == csrf_meta_tags
   body
     header
-      == render 'layouts/navigation'
+      .sticky-nav
+        == render 'layouts/navigation'
+      .nav-spacer
       / = "Logged in as #{current_user.name}"  unless current_user.blank?
 
     main[role="main"]
