Removed require for js_assets gem. Disabled Turbolinks on Looks index page referring to Look detail page as a work-around for the Revolution Lightbox plugin which is calling (document).ready and that doesn't work with turbolinks.

--- a/app/views/looks/index.html.slim
+++ b/app/views/looks/index.html.slim
@@ -4,7 +4,7 @@
     .row.title_sep.text-center
       = image_tag("home_page/xsepWhite.png", class: :sep_image)
     
-  .row
+  .row data-no-turbolink=""
     .columns.small-12
       ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1
         - @looks.each do |look|
